@@ -111,9 +111,8 @@
             <artifactId>istack-commons-runtime</artifactId>
         </dependency>
         <dependency>
-            <groupId>relaxngDatatype</groupId>
-            <artifactId>relaxngDatatype</artifactId>
-            <version>20020414</version>
+            <groupId>com.sun.xml.bind.external</groupId>
+            <artifactId>relaxng-datatype</artifactId>
         </dependency>
         <dependency>
             <groupId>args4j</groupId>
@@ -150,7 +149,7 @@
                 <executions>
                     <execution>
                         <id>copy-ant</id>
-                        <phase>process-test-sources</phase>
+                        <phase>validate</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
@@ -161,50 +160,13 @@
                     </execution>
                     <execution>
                         <id>copy-lib</id>
-                        <phase>process-test-sources</phase>
+                        <phase>validate</phase>
                         <goals>
-                            <goal>copy</goal>
+                            <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/lib/</outputDirectory>
-                            <excludeTransitive>true</excludeTransitive>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>com.sun.istack</groupId>
-                                    <artifactId>istack-commons-tools</artifactId>
-                                    <type>jar</type>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>${project.groupId}</groupId>
-                                    <artifactId>jaxb-runtime</artifactId>
-                                    <type>jar</type>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>${project.groupId}</groupId>
-                                    <artifactId>codemodel</artifactId>
-                                    <type>jar</type>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>com.sun.istack</groupId>
-                                    <artifactId>istack-commons-runtime</artifactId>
-                                    <type>jar</type>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>${project.groupId}</groupId>
-                                    <artifactId>xsom</artifactId>
-                                    <type>jar</type>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>relaxngDatatype</groupId>
-                                    <artifactId>relaxngDatatype</artifactId>
-                                    <type>jar</type>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>com.sun.xml.bind.external</groupId>
-                                    <artifactId>rngom</artifactId>
-                                    <type>jar</type>
-                                </artifactItem>
-                            </artifactItems>
+                            <outputDirectory>${project.build.directory}/mods/</outputDirectory>
+                            <excludeArtifactIds>jmockit,junit</excludeArtifactIds>
                         </configuration>
                     </execution>
                 </executions>
@@ -260,6 +222,16 @@
                         <id>default-compile</id>
                         <configuration>
                             <release>${upper.java.level}</release>
+                            <compilerArgs>
+                                <arg>--module-path</arg>
+                                <arg>${project.build.directory}/mods:${project.build.directory}/lib/ant</arg>
+                                <arg>--add-modules</arg>
+                                <arg>ant</arg>
+                                <arg>--add-reads</arg>
+                                <arg>com.sun.tools.xjc=ant</arg>
+                                <arg>--add-reads</arg>
+                                <arg>com.sun.istack.tools=ant</arg>
+                            </compilerArgs>
                         </configuration>
                     </execution>
                     <execution>
